--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,19 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
+<h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 <div class="post">
   {{ content }}
+</div>
+
+<div class="PageNavigation">
+  {% if page.previous.url %}
+    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+  {% endif %}
+  {% if page.next.url %}
+    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+  {% endif %}
 </div>
 
